--- a/app/index.html
+++ b/app/index.html
@@ -1,41 +1,59 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+    <title>NYTimes-World: Latest Five</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <nav>
-        <ul>
-            <li><a></a></li>
-            <li><a></a></li>
-            <li><a></a></li>
-            <li><a></a></li>
-            <li><a></a></li>
+<body id="body">
+    <div id="nav">
+        <div id="navFlex">
+            <a id="hambA" href="#"><img id="hambImg" src="css/img/hamb_button.png" height="40" width="40"></a>
+            <h1>NYT-World: <br>Latest Five</h1>
+            <a id="refresh" href="#">Refresh<img src="css/img/refresh_icon.jpg" height="12" width="12"></a>
+        </div>
+        <ul id="accordion">
+            <li><a id="acc0" href="#">Link 1</a></li>
+            <li><a id="acc1" href="#">Link 2</a></li>
+            <li><a id="acc2" href="#">Link 3</a></li>
+            <li><a id="acc3" href="#">Link 4</a></li>
+            <li><a id="acc4" href="#">Link 5</a></li>
         </ul>
-    </nav>
-    <content>
-        <heading>
-            <title></title>
-            <author></author>
-            <timestamp></timestamp>
-            <shortDescription></shortDescription>
-        </heading>
-        <visual>
-            <figure></figure>
-            <figcaption></figcaption>
-        </visual>
-        <article>
-            <text></text>
-        </article>
-    </content>
-    <footer>
-        <home></home>
-        <contact></contact>
-    </footer>
+    </div>
+    <div id="content">
+        <div id="heading">
+            <h1 id="headingTitle">Title</h1>
+            <h2 id="author">Author</h2>
+            <h3 id="timestamp">Month / Day / Year</h3>
+            <div>
+                <p id="shortDesc">
+                ...a short description...
+                </p>
+            </div>
+        </div>
+        <div id="visual">
+            <figure id="artclImg">
+                <img id="artclImg-img" src="css/img/news_icon.jpg" alt="">
+                <figcaption id="artclImg-text">"A caption"</figcaption>
+            </figure>
+        </div>
+        <div id="article">
+            <div id="articleText">
+                In this area will go the article text.
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div id="home">
+            <a href="#">Home</a>
+        </div>
+        <div id="contact">
+            <a href="#">Contact</a>
+        </div>
+    </div>
 </body>
-<script>
+<script src="js/scripts.js">
     //js import
 </script>
 </html>
