--- a/app/index.html
+++ b/app/index.html
@@ -23,14 +23,10 @@
     </div>
     <div id="content">
         <div id="heading">
-            <h1 id="headingTitle">Title</h1>
-            <h2 id="author">Author</h2>
-            <h3 id="timestamp">Month / Day / Year</h3>
-            <div>
-                <p id="shortDesc">
-                ...a short description...
-                </p>
-            </div>
+            <div><h1 id="headingTitle">Title</h1></div>
+            <div><h2 id="author">Author</h2></div>
+            <div><h3 id="timestamp">Month / Day / Year</h3></div>
+            <div><p id="shortDesc">...a short description...</p></div>
         </div>
         <div id="visual">
             <figure id="artclImg">
